# TrafficMapper

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
extras/: .gitignore  CMakeLists.txt
extras/qml/: Footer.qml  MainMenu.qml  MainWindow.qml
extras/qml/components/: GateList.qml  PlaybackOptions.qml  VideoControl.qml  VideoPlayer.qml
extras/qml/custom-items/: CustomButton.qml  CustomCheckBox.qml  CustomComboBox.qml  CustomItemBackground.qml  CustomSpinBox.qml  CustomTabButton.qml
extras/qml/dialogs/: DlgAnalyzerSettings.qml  DlgCameraCalibration.qml  DlgExportVideo.qml  DlgGateProperties.qml  DlgOpenCache.qml  DlgOpenVideo.qml  DlgProgressWindow.qml  DlgSaveChart.qml  DlgStatWindow.qml
src/: main.cpp
src/includes/TrafficMapper/Media/: MediaPlayer  VideoFilter  VideoFilterRunnable
src/includes/TrafficMapper/Modules/: CameraCalibration  FilterProxyModel  GateModel  StatModel  Tracker  VehicleModel
src/includes/TrafficMapper/Tools/: Helpers  HungarianAlgorithm  KalmanSmoother
src/includes/TrafficMapper/Types/: Detection  Gate  Vehicle  VideoMeta
src/includes/TrafficMapper/Workers/: TrackerWorker
src/media/: MediaPlayer.cpp  MediaPlayer.hpp  VideoFilter.cpp  VideoFilter.hpp  VideoFilterRunnable.cpp  VideoFilterRunnable.hpp
src/modules/: CameraCalibration.cpp  CameraCalibration.hpp  GateModel.cpp  GateModel.hpp  StatModel.cpp  StatModel.hpp  Tracker.cpp  Tracker.hpp  VehicleModel.cpp  VehicleModel.hpp
src/tools/: Helpers.hpp  HungarianAlgorithm.cpp  HungarianAlgorithm.hpp  KalmanSmoother.hpp
src/types/: Detection.cpp  Detection.hpp  Gate.cpp  Gate.hpp  Vehicle.cpp  Vehicle.hpp  VideoMeta.cpp  VideoMeta.hpp
src/workers/: TrackerWorker.cpp  TrackerWorker.hpp
